# skynet_local

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-audio.txt  requirements.txt
configs/: app.yaml
src/skynet_local/: __init__.py  bootstrap.py  main.py  register_face.py
src/skynet_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/skynet_local/application/: __init__.py  orchestrator.py  runtime.py
src/skynet_local/application/fusion/: __init__.py  identity_fusion_service.py
src/skynet_local/application/ports/: face_recognizer.py  face_registry.py
src/skynet_local/application/services/: __init__.py  cooldown_service.py  face_recognition_service.py  unknown_face_enrollment_service.py
src/skynet_local/application/use_cases/: __init__.py
src/skynet_local/config/: __init__.py  settings.py
src/skynet_local/domain/: __init__.py  entities.py  enums.py  protocols.py  scene_tracker.py
src/skynet_local/domain/entities/: __init__.py  identity.py  observation.py  recognition.py  scene.py
src/skynet_local/infrastructure/: __init__.py
src/skynet_local/infrastructure/audio/: __init__.py  audio_service.py  microphone.py
src/skynet_local/infrastructure/capture/: __init__.py  camera_source.py
src/skynet_local/infrastructure/gui/: __init__.py
src/skynet_local/infrastructure/storage/: __init__.py  face_registry.py  identity_repository.py
src/skynet_local/presentation/: __init__.py
src/skynet_local/presentation/modes/: base.py  (+7 more)
src/skynet_local/utils/: ids.py
tests/unit/: test_cooldown_service.py
(+38 files in other folders)
