[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skynet-local"
version = "0.1.0"
description = "Windows-safe modular face and voice assistant platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "onnxruntime>=1.18",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
qt = ["PySide6>=6.7"]
diagnostics = ["pyqtgraph>=0.13.7", "PySide6>=6.7"]
audio = ["vosk>=0.3.45", "sounddevice>=0.4.6"]
attr = ["deepface>=0.0.92"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]
all = [
  "PySide6>=6.7",
  "pyqtgraph>=0.13.7",
  "vosk>=0.3.45",
  "sounddevice>=0.4.6",
  "deepface>=0.0.92",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
skynet-local = "skynet_local.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
